--- a/UnivMedicalRecord/Pages/Homepage/Index.cshtml
+++ b/UnivMedicalRecord/Pages/Homepage/Index.cshtml
@@ -34,171 +34,171 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     </head>
-    <body style="overflow-x: hidden; overflow-y: auto">
-    <div class="row" style="height: max-content;">
-      <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark col-md-4" style="width: 280px; height: auto">
-        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-          <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-          <span class="fs-4">Menu</span>
+<body style="overflow-x: hidden; overflow-y: auto">
+<div class="row" style="height: 100%;">
+  <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark col-md-4" style="width: 280px; height: auto">
+    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+      <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+      <span class="fs-4">Menu</span>
+    </a>
+    <hr>
+    <ul class="nav nav-pills flex-column mb-auto">
+      <li>
+        <a href="#" class="nav-link text-white">
+          <form class="form-inline" method="post">
+            <button type="submit" class="dropdown-item" width="16" height="16" asp-page-handler="Dashboard">Dashboard</button>
+          </form>
         </a>
-        <hr>
-        <ul class="nav nav-pills flex-column mb-auto">
+      </li>
+
+      @{
+        if (Model.Type == "Admin")
+        {
           <li>
             <a href="#" class="nav-link text-white">
               <form class="form-inline" method="post">
-                <button type="submit" class="dropdown-item" width="16" height="16" asp-page-handler="Dashboard">Dashboard</button>
+                <button type="submit" class="dropdown-item" asp-page-handler="ViewRecords">View Medical Records</button>
               </form>
             </a>
           </li>
-
+        }
+      }
+          
+      @{
+        if (Model.Type == "Regular")
+        {
+          <li>
+            <a href="#" class="nav-link text-white">
+              <form class="form-inline" method="post">
+                <button type="submit" class="dropdown-item" width="16" height="16" asp-page-handler="LabResult">Laboratory Test</button>
+              </form>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="nav-link text-white">
+              <form class="form-inline" method="post">
+                <button type="submit" class="dropdown-item" width="16" height="16" asp-page-handler="MedicalRecord">MedicalRecord</button>
+              </form>
+            </a>
+          </li>
+        }
+      }
+      <li>
+        <a href="#" class="nav-link text-white">
+          <form class="form-inline" method="post">
+            <button type="submit" class="dropdown-item" width="16" height="16" asp-page-handler="Inbox">Inbox</button>
+          </form>
+        </a>
+      </li>
+    </ul>
+    <hr>
+    <div class="dropdown">
+      <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+        <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
+        <strong>@Model.Name</strong>
+      </a>
+      <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
+        <li>
           @{
             if (Model.Type == "Admin")
             {
-              <li>
-                <a href="#" class="nav-link text-white">
-                  <form class="form-inline" method="post">
-                    <button type="submit" class="dropdown-item" asp-page-handler="ViewRecords">View Medical Records</button>
-                  </form>
-                </a>
-              </li>
+              <form class="form-inline" method="post">
+                <button type="submit" class="dropdown-item" asp-page-handler="CreateAccount">Create Account</button>
+              </form>
+              <li><hr class="dropdown-divider"></li>
             }
           }
-          
-          @{
-            if (Model.Type == "Regular")
-            {
-              <li>
-                <a href="#" class="nav-link text-white">
-                  <form class="form-inline" method="post">
-                    <button type="submit" class="dropdown-item" width="16" height="16" asp-page-handler="LabResult">Laboratory Test</button>
-                  </form>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="nav-link text-white">
-                  <form class="form-inline" method="post">
-                    <button type="submit" class="dropdown-item" width="16" height="16" asp-page-handler="MedicalRecord">MedicalRecord</button>
-                  </form>
-                </a>
-              </li>
-            }
-          }
-          <li>
-            <a href="#" class="nav-link text-white">
-              <form class="form-inline" method="post">
-                <button type="submit" class="dropdown-item" width="16" height="16" asp-page-handler="Inbox">Inbox</button>
-              </form>
-            </a>
-          </li>
-        </ul>
-        <hr>
-        <div class="dropdown">
-          <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-            <strong>@Model.Name</strong>
-          </a>
-          <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
-            <li>
-              @{
-                if (Model.Type == "Admin")
-                {
-                  <form class="form-inline" method="post">
-                    <button type="submit" class="dropdown-item" asp-page-handler="CreateAccount">Create Account</button>
-                  </form>
-                  <li><hr class="dropdown-divider"></li>
-                }
-              }
-            </li>
-            <li>
-              <form class="form-inline" method="post">
-                <button type="submit" class="dropdown-item" asp-page-handler="Logout">Logout</button>
-              </form>
-            </li>
-          </ul>
-        </div>
-      </div> 
+        </li>
+        <li>
+          <form class="form-inline" method="post">
+            <button type="submit" class="dropdown-item" asp-page-handler="Logout">Logout</button>
+          </form>
+        </li>
+      </ul>
+    </div>
+  </div> 
       
-      <div class="col-md-8" style="background-color: #8080" style="overflow: auto">
-        @if (Model.Type == "Admin")
-        {
-          <div class="card" style="flex-direction: row; align-items: center; background-color: #111; box-shadow: unset">
-            <h1 class="mt-4" style=" font-size: 20px;color: #ffffff;font-family: Roboto, sans-serif;line-height: 1.2;">Pending Lab Records: </h1>
-          </div>
+  <div class="col-md-8" style="background-color: #8080" style="overflow: auto">
+    @if (Model.Type == "Admin")
+    {
+      <div class="card" style="flex-direction: row; align-items: center; background-color: #111; box-shadow: unset">
+        <h1 class="mt-4" style=" font-size: 20px;color: #ffffff;font-family: Roboto, sans-serif;line-height: 1.2;">Pending Lab Records: </h1>
+      </div>
 
-          <div style="flex-direction: row">
+      <div style="flex-direction: row">
               
-            @if (!Model.PendingLab.Any())
+        @if (!Model.PendingLab.Any())
+        {
+          <h1 class="mt-4" style=" font-size: 15px;color: #0d0d0d;font-family: Roboto, sans-serif;line-height: 1.2;">There are no pending lab records: </h1>
+        }
+        else
+        {
+          @foreach (var x in Model.PendingLab)
+          {
+            @if (x.CholesterolRes == null & x.FecalysisRes == null & x.UrinalysisRes == null & x.CbcRes == null)
             {
-              <h1 class="mt-4" style=" font-size: 15px;color: #0d0d0d;font-family: Roboto, sans-serif;line-height: 1.2;">There are no pending lab records: </h1>
+              <label> </label>
             }
             else
             {
-              @foreach (var x in Model.PendingLab)
-              {
-                @if (x.CholesterolRes == null & x.FecalysisRes == null & x.UrinalysisRes == null & x.CbcRes == null)
-                {
-                  <label> </label>
-                }
-                else
-                {
-                  <div class="card mt-3" style=" cursor: pointer; border: 2px solid #0000; border-radius: 8px; padding: 20px;background-color: #ffffff;box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
-                    <b>
-                      <h1 style="font-size: 25px">@x.User.Firstname @x.User.Lastname</h1></b>
-                    <p style="font-size: 20px">Pending Record/s:
+              <div class="card mt-3" style=" cursor: pointer; border: 2px solid #0000; border-radius: 8px; padding: 20px;background-color: #ffffff;box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
+                <b>
+                  <h1 style="font-size: 25px">@x.User.Firstname @x.User.Lastname</h1></b>
+                <p style="font-size: 20px">Pending Record/s:
 
-                      @if (x.CbcEncoded == false & x.CholesterolRes != null & x.FecalysisRes != null & x.UrinalysisRes != null & x.CbcRes != null)
-                      {
-                        <label style="font-size: 15px;">Cbc Record</label>
-                      }
-                      @if (x.FecalEncoded == false & x.CholesterolRes != null & x.FecalysisRes != null & x.UrinalysisRes != null & x.CbcRes != null)
-                      {
-                        <label style="font-size: 15px">,Fecalysis Record</label>
-                      }
-                      @if (x.UrinalEncoded == false & x.CholesterolRes != null & x.FecalysisRes != null & x.UrinalysisRes != null & x.CbcRes != null)
-                      {
-                        <label style="font-size: 15px ">,Urinalysis Record</label>
-                      }
-                      @if (x.CholesEncoded == false & x.CholesterolRes != null & x.FecalysisRes != null & x.UrinalysisRes != null & x.CbcRes != null)
-                      {
-                        <label style="font-size: 15px">,Cholesterol Record</label>
-                      }
-                    </p>
-                    <a style="background-color: transparent; color: #000000;text-decoration: none;border-bottom: 1px dotted;" class="btn-close-dark" asp-page="../LaboratoryRecord/AddLab" asp-route-id="@x.Id">Edit</a>
-                  </div>
-                }
-
-              }
-            }
-          </div>
-        }
-        
-        else
-        {
-          <div class="card" style="flex-direction: row; align-items: center; background-color: #111; box-shadow: unset">
-            <h1 class="mt-4" style=" font-size: 20px;color: #ffffff;font-family: Roboto, sans-serif;line-height: 1.2;">Recent Reports: </h1>
-          </div>
-          <div class="row">
-            @for (int i = 0; i < 3; i++)
-            {
-              <div class="col-md-4 mb-4 mt-2">
-                <div class="card border-dark mb-3" style="width: 18rem;">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-dark">Card link</a>
-                    <a href="#" class="btn btn-dark">Another link</a>
-                  </div>
-                </div>
+                  @if (x.CbcEncoded == false & x.CholesterolRes != null & x.FecalysisRes != null & x.UrinalysisRes != null & x.CbcRes != null)
+                  {
+                    <label style="font-size: 15px;">Cbc Record</label>
+                  }
+                  @if (x.FecalEncoded == false & x.CholesterolRes != null & x.FecalysisRes != null & x.UrinalysisRes != null & x.CbcRes != null)
+                  {
+                    <label style="font-size: 15px">,Fecalysis Record</label>
+                  }
+                  @if (x.UrinalEncoded == false & x.CholesterolRes != null & x.FecalysisRes != null & x.UrinalysisRes != null & x.CbcRes != null)
+                  {
+                    <label style="font-size: 15px ">,Urinalysis Record</label>
+                  }
+                  @if (x.CholesEncoded == false & x.CholesterolRes != null & x.FecalysisRes != null & x.UrinalysisRes != null & x.CbcRes != null)
+                  {
+                    <label style="font-size: 15px">,Cholesterol Record</label>
+                  }
+                </p>
+                <a style="background-color: transparent; color: #000000;text-decoration: none;border-bottom: 1px dotted;" class="btn-close-dark" asp-page="../LaboratoryRecord/AddLab" asp-route-id="@x.Id">Edit</a>
               </div>
             }
+
+          }
+        }
+      </div>
+    }
+        
+    else
+    {
+      <div class="card" style="flex-direction: row; align-items: center; background-color: #111; box-shadow: unset">
+        <h1 class="mt-4" style=" font-size: 20px;color: #ffffff;font-family: Roboto, sans-serif;line-height: 1.2;">Recent Reports: </h1>
+      </div>
+      <div class="row">
+        @for (int i = 0; i < 3; i++)
+        {
+          <div class="col-md-4 mb-4 mt-2">
+            <div class="card border-dark mb-3" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-dark">Card link</a>
+                <a href="#" class="btn btn-dark">Another link</a>
+              </div>
+            </div>
           </div>
-          <div>
+        }
+      </div>
+      <div>
             
-            <div class="card" style="height: fit-content">
-              <form method="post">
-                <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-                <script>
+        <div class="card" style="height: fit-content">
+          <form method="post">
+            <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+            <script>
                                         var chartData = {
                                             labels: @Html.Raw(Json.Serialize(Model.ChartLabels)),
                                             datasets: [{
@@ -230,28 +230,28 @@
                                     </script>
 
 
-                <div class="card" style="flex-direction: row; align-items: center; background-color: #111; box-shadow: unset">
-                  <h1 style="font-size: 15px;color: #ffffff;font-family: Roboto, sans-serif;line-height: 1.2;">Laboratory Result Summary: </h1>
-                </div>
-                <div>
-                  <input type="date" asp-for="DateSummary"/>
-                  <select asp-for="ChosenSummary">
-                    <option value="CBC">CBC</option>
-                    <option value="Fecalysis">Fecalysis</option>
-                    <option value="Cholesterol">Cholesterol</option>
-                  </select>
-                  <button class="btn btn-dark" type="submit" asp-page-handler="Select">View</button>
-                  <div style="width: 900px; height: 500px;">
-                    <canvas id="myChart"></canvas>
-                  </div>
-                </div>
-              </form>
+            <div class="card" style="flex-direction: row; align-items: center; background-color: #111; box-shadow: unset">
+              <h1 style="font-size: 15px;color: #ffffff;font-family: Roboto, sans-serif;line-height: 1.2;">Laboratory Result Summary: </h1>
             </div>
-          </div>
-        }
+            <div>
+              <input type="date" asp-for="DateSummary"/>
+              <select asp-for="ChosenSummary">
+                <option value="CBC">CBC</option>
+                <option value="Fecalysis">Fecalysis</option>
+                <option value="Cholesterol">Cholesterol</option>
+              </select>
+              <button class="btn btn-dark" type="submit" asp-page-handler="Select">View</button>
+              <div style="width: 900px; height: 500px;">
+                <canvas id="myChart"></canvas>
+              </div>
+            </div>
+          </form>
+        </div>
       </div>
-    </div>
-    </body>
+    }
+  </div>
+</div>
+</body>
 </html>
 
 
